--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tyitproject2020">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TYITPROJECT2020">
-        <activity android:name=".SplashScreen.GuestLogin"></activity>
+        android:theme="@style/Theme.TYITPROJECT2020"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SplashScreen.SigningFirebaseBuffer"></activity>
+        <activity
+            android:name=".HomePage.HomePageIndex"
+            android:theme="@style/deepak" />
+        <activity android:name=".SplashScreen.GuestLogin" />
         <activity android:name=".SplashScreen.StudentLogin" />
         <activity android:name=".SplashScreen.Credential" />
         <activity android:name=".SplashScreen.IntroductionSlider" />
